--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <link rel="stylesheet" href="styles2/styles2.css">
 </head>
 
-<img src="images/image1.jpg" alt="image1">
-<img src="images/image2.jpg" alt="image2">
-<img src="images/image3.jpg" alt="image3">
-<img src="images/image4.jpg" alt="image4">
+<img src="images2/image5.jpg" alt="image5">
+<img src="images2/image6.jpg" alt="image6">
+<img src="images2/image7.jpg" alt="image7">
+<img src="images2/image8.jpg" alt="image8">
 
 
 
