add link to styles2.css in index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles2/styles2.css">
 </head>
 
 <img src="images/image1.jpg" alt="image1">
